edit info modal text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           breaking (all these sites are from an era where low-res 4:3 monitors were king).
         </p>
         <p>
-          GeoTourguide relies on <a href="www.oocities.org/">Oocities</a> for its archive content.
+          GeoTourguide relies on <a href="http://www.oocities.org/">Oocities</a> for its archives.
           The sites and site listings come from here. Because of the way GeoTourguide fetches the
           site lists, requests are routed through the
           <a href="https://cors-anywhere.herokuapp.com/">CORS Anywhere</a> proxy. If either Oocities
