change app title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta charset="utf-8"/>
-    <title>GeoTourguide - Geocities archive explorer</title>
+    <title>GeoTourguide - GeoCities archive explorer</title>
   </head>
   <body>
     <div id="info-modal" class="modal-hidden">
@@ -30,7 +30,10 @@
     </div>
     
     <nav>
-      <h1>GeoTourguide <a href="#" id="show-info">🛈</a></h1>
+      <div id="app-title">
+        <h1>GeoTourguide <a href="#" id="show-info">🛈</a></h1>
+        <p>A GeoCities explorer by <a href="https://fechan.github.io/">Frederick Chan</a></p>
+      </div>
       <select name="neighborhood" id="neighborhood-select">
         <option value="tokyo">Tokyo</option>
         <option value="siliconvalley">Silicon Valley</option>
