--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav>
       <div id="app-title">
         <h1>GeoTourguide <a href="#" id="show-info">🛈</a></h1>
-        <p>A GeoCities explorer by <a href="https://fechan.github.io/">Frederick Chan</a></p>
+        <p>GeoCities archive explorer by <a href="https://fechan.github.io/">Frederick Chan</a></p>
       </div>
       <select name="neighborhood" id="neighborhood-select">
         <option value="tokyo">Tokyo</option>
