add all neighborhoods

--- a/index.html
+++ b/index.html
@@ -35,8 +35,40 @@
         <p>GeoCities archive explorer by <a href="https://fechan.github.io/">Frederick Chan</a></p>
       </div>
       <select name="neighborhood" id="neighborhood-select">
-        <option value="tokyo">Tokyo</option>
-        <option value="siliconvalley">Silicon Valley</option>
+        <option value="area51">Area 51 - Sci-fi & fantasy</option>
+        <option value="athens">Athens - Teaching, education, philosophy, reading, writing</option>
+        <option value="augusta">Augusta - Golf</option>
+        <option value="baja">Baja - Off-road & adventure travel</option>
+        <option value="bourbonstreet">
+          Bourbon Street - Jazz, New Orleans, Cajun food, Southern US Topics
+        </option>
+        <option value="capecanaveral">
+          CapeCanaveral -  Science, mathematics, aviation, technology, engineering
+        </option>
+        <option value="capitolhill">Capitol Hill - Government & politics</option>
+        <option value="collegepark">College Park - University life</option>
+        <option value="colosseum">Colosseum - Athletics & sports</option>
+        <option value="enchantedforest">Enchanted Forest - Topics of interest to children</option>
+        <option value="hollywood">Hollywood - Films & actors</option>
+        <option value="motorcity">Motor City - Automobiles & racing</option>
+        <option value="napavalley">Napa Valley - Wine</option>
+        <option value="nashville">Nashville - Country music</option>
+        <option value="petsburgh">Petsburgh - Pets</option>
+        <option value="pipeline">Pipeline - Extreme sports</option>
+        <option value="rainforest">Rainforest - conservation</option>
+        <option value="researchtriangle">Research Triangle - R&D & tech</option>
+        <option value="siliconvalley">
+          Silicon Valley - Computers, programming, hardware, technology
+        </option>
+        <option value="soho">SoHo - Art & writing</option>
+        <option value="sunsetstrip">Sunset Strip - Blues, punk rock & rock n' roll, grunge</option>
+        <option value="timessquare">Times Square - Computer & video games</option>
+        <option value="televisioncity">Television City - TV</option>
+        <option value="tokyo">Tokyo - Far East</option>
+        <option value="vienna">Vienna - Ballet, opera, classical music</option>
+        <option value="yosemite">
+          Yosemite - Outdoor sports/recreation, climbing, skiing, hiking, rafting
+        </option>
       </select>
       <ul id="site-list"></ul>
     </nav>
