iframe allow-top-navigation

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </select>
       <ul id="site-list"></ul>
     </nav>
-    <iframe name="archive-display" id="archive-display"></iframe>
+    <iframe name="archive-display" id="archive-display" sandbox="allow-top-navigation"></iframe>
     <script src="app.js"></script>
     <script src="info.js"></script>
   </body>
