--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta charset="utf-8"/>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>GeoTourguide - GeoCities archive explorer</title>
   </head>
   <body>
