browser recommendations hehe

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
           <a href="https://cors-anywhere.herokuapp.com/">CORS Anywhere</a> proxy. If either Oocities
           or CORS Anywhere are down, the site list will fail to display.
         </p>
+        <p>
+          This app is best viewed in <s>Internet Explorer</s> <s>Netscape Navigator</s> a modern
+          browser.
+        </p>
         <button id="close-info">Close</button>
       </div>
     </div>
