add direct link button

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <div id="app-title">
         <h1>GeoTourguide <a href="#" id="show-info">🛈</a></h1>
         <p>GeoCities archive explorer by <a href="https://fechan.github.io/">Frederick Chan</a></p>
+        <p><a href="#" id="get-link" title="Get link to current site">🔗</a></p>
       </div>
       <select name="neighborhood" id="neighborhood-select">
         <option value="area51">Area 51 - Sci-fi & fantasy</option>
