add snadbox attrib

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
       <ul id="site-list"></ul>
     </nav>
     <div id="resizer">
-      <iframe name="archive-display" id="archive-display"></iframe>
+      <iframe name="archive-display" id="archive-display"
+        sandbox="allow-scripts allow-popups allow-modals">
+      </iframe>
     </div>
     <script src="app.js"></script>
     <script src="info.js"></script>
